fix: don't cut off popover menu on mobile

--- a/packages/swirl-components/src/components/swirl-menu/swirl-menu.css
+++ b/packages/swirl-components/src/components/swirl-menu/swirl-menu.css
@@ -31,9 +31,6 @@
   }
 
   & .menu__menu {
-    position: absolute;
-    top: 0;
-    left: 0;
     display: none;
     width: 100%;
   }
